# ALPminer

./: .gitattributes  .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml  start-gui-linux.sh  start-gui-macos.command  start-gui-windows.bat
alpminer/: __init__.py  cli.py  config.py  db.py  download.py  export.py  extract.py  gui.py  harvest.py  manual.py  pdftext.py  profiles.py  providers.py  schema.py  utils.py
alpminer/profiles/: ald.toml  ale.toml
alpminer/static/: index.html
tests/: conftest.py  test_cli.py  test_db.py  test_download.py  test_export.py  test_extract.py  test_gui.py  test_gui_smoke.py  test_harvest.py  test_manual.py  test_meta.py  test_pdftext.py  test_profiles.py  test_providers.py  test_schema.py  test_utils.py
